Fixed Lint warnings.